--- a/.docker/site.conf
+++ b/.docker/site.conf
@@ -12,11 +12,10 @@ http {
             try_files $uri $uri/ /index.php?$query_string;
         }
 
-       location ~ \.php$ {
+        location ~ \.php$ {
             fastcgi_pass 127.0.0.1:9000;
-            fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-            include fastcgi_params;
-            internal;
-       }
+            fastcgi_index index.php;
+            include fastcgi.conf;
+        }
     }
 }
