--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,5 @@ services:
       - .:/docker-files
       - ${LARAVEL_APP_LOCATION}/${LARAVEL_APP_NAME}:/laravel-app
       - ./.docker/site.conf:/etc/nginx/nginx.conf
-      - /run/host-services/ssh-auth.sock:/run/host-services/ssh-auth.sock
-    restart: unless-stopped
+      - /run/host-services/ssh-auth.sock:/run/host-services/ssh-auth.socks
     container_name: ${APP_CONTAINER_NAME}
