--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,13 @@ version: '3.9'
 services:
   app:
     build:
-      context: ./.docker
+      context: ./.docker/php-fpm
       ssh: [ 'default' ]
     ports:
       - "${NGINX_PORT}:80"
     volumes:
-      - .:/docker-files
       - ${LARAVEL_APP_LOCATION}/${LARAVEL_APP_NAME}:/laravel-app
-      - ./.docker/site.conf:/etc/nginx/nginx.conf
+      - ./.docker/php-fpm/site.conf:/etc/nginx/nginx.conf
       - /run/host-services/ssh-auth.sock:/run/host-services/ssh-auth.socks
     working_dir: /laravel-app
     container_name: ${APP_CONTAINER_NAME}
