--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,5 +17,8 @@ jobs:
       - name: 'Checkout code'
         uses: actions/checkout@v3
 
+      - name: 'Prepare env'
+        run: cp .env.example .env
+
       - name: 'Build the stack'
         run: docker-compose up -d
