--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,4 @@ jobs:
         run: cp .env.example .env
 
       - name: 'Build the stack'
-        run: docker-compose up -d
+        uses: isbang/compose-action@v1.4.1
