--- a/.docker/php-fpm/Dockerfile
+++ b/.docker/php-fpm/Dockerfile
@@ -1,5 +1,13 @@
 FROM php:8.2-fpm-alpine
 
+ARG DB_NAME
+ARG DB_USER
+ARG DB_PASSWORD
+
+ENV db_name=${DB_NAME}
+ENV db_user=${DB_USER}
+ENV db_password=${DB_PASSWORD}
+
 RUN apk add --no-cache \
     git \
     nginx \
@@ -15,4 +23,4 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 COPY docker-entrypoint.sh /usr/local/bin/
 
-ENTRYPOINT ["docker-entrypoint.sh"]
+ENTRYPOINT docker-entrypoint.sh $db_name $db_user $db_password
