--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,10 @@ services:
     build:
       context: ./.docker/php-fpm
       ssh: [ 'default' ]
-      args:
-        - DB_NAME=${MYSQL_DATABASE}
-        - DB_USER=${MYSQL_USER}
-        - DB_PASSWORD=${MYSQL_PASSWORD}
     ports:
       - "${NGINX_PORT}:80"
+    env_file:
+      - .env
     volumes:
       - ${LARAVEL_APP_LOCATION}/${LARAVEL_APP_NAME}:/laravel-app
       - ./.docker/php-fpm/site.conf:/etc/nginx/nginx.conf
