Add rabbit MQ image

--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,12 @@ LARAVEL_APP_NAME=laravel-app
 
 # MySQL
 MYSQL_PORT=3307
-MYSQL_CONTAINER_NAME=laravel-mysql
+MYSQL_CONTAINER_NAME=laravel_mysql
 MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=laravel
 MYSQL_USER=laravel
 MYSQL_PASSWORD=laravel
+
+#RabbitMQ
+RABBITMQ_CONTAINER_NAME=laravel_rabbitmq
+RABBITMQ_PORT=15672
