--- a/.docker/php-fpm/Dockerfile
+++ b/.docker/php-fpm/Dockerfile
@@ -7,6 +7,8 @@ RUN apk add --no-cache \
     bash
 
 RUN docker-php-ext-install pdo pdo_mysql
+RUN curl -o /usr/local/bin/waitforit -sSL https://github.com/maxcnunes/waitforit/releases/download/v2.4.1/waitforit-linux_amd64 && \
+    chmod +x /usr/local/bin/waitforit
 
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
