--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,3 +31,8 @@ services:
     ports:
       - "${RABBITMQ_PORT}:15672"
     container_name: ${RABBITMQ_CONTAINER_NAME}
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
