--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ MYSQL_DATABASE=laravel
 MYSQL_USER=laravel
 MYSQL_PASSWORD=laravel
 
-#RabbitMQ
+# RabbitMQ
 RABBITMQ_CONTAINER_NAME=laravel_rabbitmq
 RABBITMQ_PORT=15672
+
+# Redis
+REDIS_CONTAINER_NAME=laravel_redis
+REDIS_PORT=6379
