--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "solidcode-kch/laravel-in-docker",
     "description": "Run Laravel project on Docker",
+    "keywords": ["laravel", "docker", "laravel-in-docker", "solidcode"],
     "type": "project",
     "license": "MIT",
     "authors": [
