Add mailhog container

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,6 @@ RABBITMQ_PORT=15672
 # Redis
 REDIS_CONTAINER_NAME=laravel_redis
 REDIS_PORT=6379
+
+#Mailhog
+MAILHOG_CONTAINER_NAME=laravel_mailhog
