--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,3 +37,13 @@ services:
     ports:
       - "${REDIS_PORT}:6379"
     container_name: ${REDIS_CONTAINER_NAME}
+
+  mailhog:
+    platform: linux/x86_64
+    image: mailhog/mailhog
+    logging:
+      driver: 'none'
+    ports:
+      - "8003:1025"
+      - "8100:8025"
+    container_name: ${MAILHOG_CONTAINER_NAME}
