Add env setting for mailhog

--- a/.env.example
+++ b/.env.example
@@ -23,5 +23,7 @@ RABBITMQ_PORT=15672
 REDIS_CONTAINER_NAME=laravel_redis
 REDIS_PORT=6379
 
-#Mailhog
+# Mailhog
 MAILHOG_CONTAINER_NAME=laravel_mailhog
+MAILHOG_SENDING_PORT=8003
+MAILGOH_RECEIVING_PORT=8100
