--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,6 @@ services:
     logging:
       driver: 'none'
     ports:
-      - "8003:1025"
-      - "8100:8025"
+      - "${MAILHOG_SENDING_PORT}:1025"
+      - "${MAILGOH_RECEIVING_PORT}:8025"
     container_name: ${MAILHOG_CONTAINER_NAME}
